fix: divider and lable is not aligned

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -2248,7 +2248,8 @@ input[type="text"].select2-search__field {
 }
 
 .ast-top-divider > label.ast-divider-title, .ast-bottom-divider > label.ast-divider-title,
-.customize-control-ast-color-group > .ast-divider-title {
+.customize-control-ast-color-group > .ast-divider-title,
+.customize-control-ast-heading .ast-divider-title {
 	display: block;
 	width: 100%;
 	font-size: 15px;
@@ -3780,6 +3781,7 @@ span.select2-container.select2-container--default.select2-container--open li.sel
   vertical-align: middle;
 }
 
+
 .customize-control-ast-customizer-link .customizer-link {
   font-style: italic;
   text-decoration: none;
@@ -4028,7 +4030,8 @@ input[type="text"].select2-search__field {
 }
 
 .ast-top-divider > label.ast-divider-title, .ast-bottom-divider > label.ast-divider-title,
-.customize-control-ast-color-group > .ast-divider-title {
+.customize-control-ast-color-group > .ast-divider-title,
+.customize-control-ast-heading .ast-divider-title {
 	display: block;
 	width: 100%;
 	font-size: 15px;
